--- a/client/ChatClient/Core/ChatClient.Core.SAL/ChatClient.Core.SAL.csproj
+++ b/client/ChatClient/Core/ChatClient.Core.SAL/ChatClient.Core.SAL.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Methods\UsersGet.cs" />
     <Compile Include="Methods\UserUpdate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Methods\OnlineStatusGet.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
