--- a/client/ChatClient/Core/ChatClient.Core.UI/ChatClient.Core.UI.csproj
+++ b/client/ChatClient/Core/ChatClient.Core.UI/ChatClient.Core.UI.csproj
@@ -97,7 +97,7 @@
     <Compile Include="ViewModels\GroupViewModel.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\ChatMessageViewModel.cs" />
-    <Compile Include="ViewModels\ChatViewModel.cs" />
+    <Compile Include="ViewModels\GroupChatViewModel.cs" />
     <Compile Include="ViewModels\DialogsViewModel.cs" />
     <Compile Include="ViewModels\MembersViewModel.cs" />
     <Compile Include="ViewModels\PhotoSourseViewModel.cs" />
@@ -105,6 +105,7 @@
     <Compile Include="Controls\CreateGroupButton.cs" />
     <Compile Include="Controls\GroupListImage.cs" />
     <Compile Include="Controls\GroupsListView.cs" />
+    <Compile Include="ViewModels\PrivateChatViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="App.xaml">
