--- a/client/ChatClient/Core/ChatClient.Core.SAL/ChatClient.Core.SAL.csproj
+++ b/client/ChatClient/Core/ChatClient.Core.SAL/ChatClient.Core.SAL.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Methods\OnlineStatusGet.cs" />
     <Compile Include="Methods\TypingSetRequest.cs" />
+    <Compile Include="Methods\MessageStatusGet.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
