--- a/client/ChatClient/ChatClient.iOS/packages.config
+++ b/client/ChatClient/ChatClient.iOS/packages.config
@@ -12,7 +12,7 @@
   <package id="PInvoke.NCrypt" version="0.3.2" targetFramework="xamarinios10" />
   <package id="PInvoke.Windows.Core" version="0.3.2" targetFramework="xamarinios10" />
   <package id="Plugin.Permissions" version="1.2.1" targetFramework="xamarinios10" />
-  <package id="Rg.Plugins.Popup" version="1.0.4" targetFramework="xamarinios10" />
+  <package id="Rg.Plugins.Popup" version="1.1.0-pre2" targetFramework="xamarinios10" />
   <package id="SocketIoClientDotNet" version="0.9.13" targetFramework="xamarinios10" />
   <package id="sqlite-net-pcl" version="1.2.1" targetFramework="xamarinios10" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.0" targetFramework="xamarinios10" />
