--- a/client/ChatClient/Core/ChatClient.Core.UI/packages.config
+++ b/client/ChatClient/Core/ChatClient.Core.UI/packages.config
@@ -3,7 +3,7 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="PCLCrypto" version="2.0.147" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Plugin.Permissions" version="1.2.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
-  <package id="Rg.Plugins.Popup" version="1.0.4" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Rg.Plugins.Popup" version="1.1.0-pre2" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Validation" version="2.2.8" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xam.Plugin.Geolocator" version="3.0.4" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xam.Plugin.Media" version="2.6.2" targetFramework="portable45-net45+win8+wp8+wpa81" />
