--- a/client/ChatClient/ChatClient.Droid/packages.config
+++ b/client/ChatClient/ChatClient.Droid/packages.config
@@ -13,7 +13,7 @@
   <package id="PInvoke.Windows.Core" version="0.3.2" targetFramework="monoandroid60" />
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid70" />
   <package id="Plugin.Permissions" version="1.2.1" targetFramework="monoandroid70" />
-  <package id="Rg.Plugins.Popup" version="1.0.4" targetFramework="monoandroid60" />
+  <package id="Rg.Plugins.Popup" version="1.1.0-pre2" targetFramework="monoandroid70" />
   <package id="SocketIoClientDotNet" version="0.9.13" targetFramework="monoandroid60" />
   <package id="sqlite-net-pcl" version="1.2.1" targetFramework="monoandroid60" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.0" targetFramework="monoandroid60" />
