multithreading protection added to v class: initial

--- a/client/ChatClient/Core/ChatClient.Core.Common/ChatClient.Core.Common.csproj
+++ b/client/ChatClient/Core/ChatClient.Core.Common/ChatClient.Core.Common.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Interfaces\ILocalize.cs" />
     <Compile Include="TranslateExtension.cs" />
     <Compile Include="Properties\v.cs" />
+    <Compile Include="Properties\Tests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
