--- a/client/ChatClient.UWP/project.json
+++ b/client/ChatClient.UWP/project.json
@@ -1,6 +1,18 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0"
+    "Microsoft.Bcl.Build": "1.0.21",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.3",
+    "Newtonsoft.Json": "9.0.1",
+    "Plugin.Permissions": "1.2.1",
+    "Rg.Plugins.Popup": "1.0.4",
+    "SocketIoClientDotNet": "0.9.13",
+    "sqlite-net-pcl": "1.2.1",
+    "Validation": "2.2.8",
+    "Xam.Plugin.DeviceInfo": "2.1.2",
+    "Xam.Plugin.Geolocator": "3.0.4",
+    "Xam.Plugin.Media": "2.6.2",
+    "Xam.Plugins.Forms.ImageCircle": "1.8.1",
+    "Xamarin.Forms": "2.3.4.247"
   },
   "frameworks": {
     "uap10.0": {}
