xamarin.forms updated to 2.3.4.247

--- a/client/ChatClient/ChatClient.Droid/packages.config
+++ b/client/ChatClient/ChatClient.Droid/packages.config
@@ -47,7 +47,7 @@
   <package id="Xamarin.Firebase.Config" version="42.1001.0" targetFramework="MonoAndroid70" />
   <package id="Xamarin.Firebase.Iid" version="42.1001.0" targetFramework="MonoAndroid70" />
   <package id="Xamarin.Firebase.Messaging" version="42.1001.0" targetFramework="MonoAndroid70" />
-  <package id="Xamarin.Forms" version="2.3.4.231" targetFramework="MonoAndroid70" />
+  <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="monoandroid70" />
   <package id="Xamarin.GooglePlayServices.Base" version="42.1001.0" targetFramework="MonoAndroid70" />
   <package id="Xamarin.GooglePlayServices.Basement" version="42.1001.0" targetFramework="MonoAndroid70" />
   <package id="Xamarin.GooglePlayServices.Tasks" version="42.1001.0" targetFramework="MonoAndroid70" />
