--- a/client/ChatClient/Core/ChatClient.Core.UI/ChatClient.Core.UI.csproj
+++ b/client/ChatClient/Core/ChatClient.Core.UI/ChatClient.Core.UI.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Controls\GroupListImage.cs" />
     <Compile Include="Controls\GroupsListView.cs" />
     <Compile Include="ViewModels\PrivateChatViewModel.cs" />
+    <Compile Include="UIMessages.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="App.xaml">
@@ -187,7 +188,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="GettingStarted.Xamarin" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
