--- a/client/ChatClient/Core/ChatClient.Core.UI/ChatClient.Core.UI.csproj
+++ b/client/ChatClient/Core/ChatClient.Core.UI/ChatClient.Core.UI.csproj
@@ -47,6 +47,9 @@
     <Compile Include="Menus\MenuListItem.cs" />
     <Compile Include="Pages\BasePage.cs" />
     <Compile Include="Pages\ChatPage.cs" />
+    <Compile Include="Pages\pgChat.xaml.cs">
+      <DependentUpon>pgChat.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\pgGroup.xaml.cs">
       <DependentUpon>pgGroup.xaml</DependentUpon>
     </Compile>
@@ -288,6 +291,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Pages\pgMyGroups.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages\pgChat.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
