--- a/server/package.json
+++ b/server/package.json
@@ -56,7 +56,8 @@
     "shortid": "^2.2.8",
     "socket.io": "^1.7.2",
     "socketio-jwt": "^4.5.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
